test/error/compile_exception_in_solution/src/CompileExceptionInSolution.hx
package;

class CompileExceptionInSolution {
	static var e = throw "compile exception";

	public static function identity<T>(x:T):T {
		return x;
	}
}
